# Synthea-Based-Hospital-Dashboard

./: .gitignore  Analysis.ipynb  Main Model.ipynb  README.md  XGBoostModel.joblib  app.py  baseLogRegressModel.joblib  main.py  model1.ipynb  models.py  pyproject.toml  utilities.py
Datasets/: Simulated_Hospital_Admissions.csv
api/: api.py  utilities.py
assets/: custom.css
components/: navbar.py
core_model/: main.py  pyproject.toml
dashboard/: app.py
dashboard/pages/: conditions_dashboard.py  data_generation.py  patient_demographics.py  procedures_dashboard.py
etl_pipeline/: ETL.ipynb  conditions.py  master.py  patients.py  procedures.py
etl_pipeline/moduled_scripts/: allergies.py  conditions.py  patients.py  procedures.py
scripts/: synthea-init.sh
