[project]
name = "hospital-readmission-prediction-and-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "imblearn>=0.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pickl>=0.3.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
