[project]
name = "hospital-readmission-prediction-and-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "fastapi>=0.116.1",
    "http-status>=1.0.0",
    "httpx>=0.28.1",
    "imblearn>=0.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pickl>=0.3.0",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "status>=0.2.5",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
