[project]
name = "hospital-readmission-prediction-and-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pyspark>=4.0.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
